--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Project/01_FirstWindow/Debug
 /Project/01_FirstWindow/01_FirstWindow/x64
 /Project/01_FirstWindow/01_FirstWindow/Debug
+/Project/01_FirstWindow/UpgradeLog.htm
