--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Project/01_FirstWindow/01_FirstWindow/x64
 /Project/01_FirstWindow/01_FirstWindow/Debug
 /Project/01_FirstWindow/UpgradeLog.htm
+/Project/OpenGLApp/Debug
+/Project/OpenGLApp/x64
+/Project/OpenGLApp/.vs
+/.vs
