--- a/Project/OpenGLApp/OpenGLApp.vcxproj.filters
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj.filters
@@ -30,5 +30,12 @@
     <ClCompile Include="00_Include\Common.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="03_HelloShader\03_HelloShader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="03_HelloShader\03_shader.vert" />
+    <None Include="03_HelloShader\03_shader.frag" />
   </ItemGroup>
 </Project>
