--- a/Project/OpenGLApp/OpenGLApp.vcxproj.filters
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj.filters
@@ -35,8 +35,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="03_HelloShader\03_shader.vert" />
-    <None Include="03_HelloShader\03_shader.frag" />
+    <None Include="Shader\03_shader.vert" />
+    <None Include="Shader\03_shader.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="00_Include\Config.h">
