--- a/Project/OpenGLApp/OpenGLApp.vcxproj
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj
@@ -21,8 +21,16 @@
   <ItemGroup>
     <ClCompile Include="00_Include\Common.cpp" />
     <ClCompile Include="00_Include\glad.c" />
+    <ClCompile Include="00_Include\Template.frag">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="00_Include\OpenGLAPP.cpp" />
     <ClCompile Include="00_Include\Template.cpp" />
+    <ClCompile Include="00_Include\Template.vert">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="01_HelloWindow\01_HelloWindow.cpp" />
     <ClCompile Include="02_HelloTriangle\02_HelloTriangle.cpp" />
     <ClCompile Include="03_HelloShader\03_HelloShader.cpp" />
