--- a/Project/OpenGLApp/OpenGLApp.vcxproj.filters
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="04_Texture\04_Texture.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="00_Include\Template.vert">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="00_Include\Template.frag">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\03_shader.vert" />
