--- a/Project/OpenGLApp/OpenGLApp.vcxproj
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj
@@ -42,6 +42,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="06_Transform3D\06_Transform3D.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\03_shader.frag" />
@@ -59,6 +63,14 @@
       </SubType>
     </None>
     <None Include="Shader\05_Transform.vert">
+      <SubType>
+      </SubType>
+    </None>
+    <None Include="Shader\06_Transform3D.frag">
+      <SubType>
+      </SubType>
+    </None>
+    <None Include="Shader\06_Transform3D.vert">
       <SubType>
       </SubType>
     </None>
