--- a/Project/OpenGLApp/OpenGLApp.vcxproj.filters
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="05_Transform\05_Transform.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="06_Transform3D\06_Transform3D.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\03_shader.vert" />
@@ -56,6 +59,8 @@
     <None Include="Shader\04_Texture.frag" />
     <None Include="Shader\05_Transform.frag" />
     <None Include="Shader\05_Transform.vert" />
+    <None Include="Shader\06_Transform3D.frag" />
+    <None Include="Shader\06_Transform3D.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="00_Include\Config.h">
