--- a/Project/OpenGLApp/OpenGLApp.vcxproj.filters
+++ b/Project/OpenGLApp/OpenGLApp.vcxproj.filters
@@ -53,8 +53,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shader\03_shader.vert" />
-    <None Include="Shader\03_shader.frag" />
+    <None Include="Shader\03_HelloShader.vert" />
+    <None Include="Shader\03_HelloShader.frag" />
     <None Include="Shader\04_Texture.vert" />
     <None Include="Shader\04_Texture.frag" />
     <None Include="Shader\05_Transform.frag" />
